use default pylintrc filename

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,3 +10,7 @@ repos:
     rev: master
     hooks:
       - id: git-secrets
+  - repo: https://github.com/PyCQA/pylint
+    rev: master
+    hooks:
+      - id: pylint
