--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,4 +20,4 @@ jobs:
       - run:
           name: Lint AWS ECR scan results script
           command: |
-            pylint aws_ecr_scan_results.py --rcfile=./pylint_config.rc
+            pylint aws_ecr_scan_results.py
